Bug 964293 - Implement Cu.cloneInto() method, r=bholley